<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:backgroundTint="@color/design_default_color_primary"
    android:layout_marginStart="20dp"
    android:layout_marginTop="150dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="24dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrier"
            style="@style/game_title_card_text">

            <TextView
                android:id="@+id/game_title_text"
                android:text="@string/game_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="414dp"
                style="@style/game_title_style" />
        </android.support.v7.widget.CardView>

        <ImageButton
            android:id="@+id/home_imagebutton"
            style="@style/home_imgbutton_style"
            android:layout_width="314dp"
            android:layout_height="178dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playagain_imagebutton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            app:srcCompat="@drawable/replay_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/playagain_imagebutton"
            style="@style/play_imgbutton_style"
            android:layout_width="314dp"
            android:layout_height="178dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_imagebutton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/showresults_imagebutton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            app:srcCompat="@drawable/replay_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/showresults_imagebutton"
            style="@style/results_imgbutton_style"
            android:layout_width="314dp"
            android:layout_height="178dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playagain_imagebutton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.497"
            app:srcCompat="@drawable/replay_button"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/results_textview"
            style="@style/results_text_style"
            android:layout_width="251dp"
            android:layout_height="134dp"
            android:text="@string/results"
            app:layout_constraintBottom_toBottomOf="@+id/showresults_imagebutton"
            app:layout_constraintEnd_toEndOf="@+id/showresults_imagebutton"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toStartOf="@+id/showresults_imagebutton"
            app:layout_constraintTop_toTopOf="@+id/showresults_imagebutton"
            app:layout_constraintVertical_bias="0.586" />

        <TextView
            android:id="@+id/home_textview"
            style="@style/home_text_style"
            android:layout_width="300dp"
            android:layout_height="158dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="@+id/home_imagebutton"
            app:layout_constraintEnd_toEndOf="@+id/home_imagebutton"
            app:layout_constraintStart_toStartOf="@+id/home_imagebutton"
            app:layout_constraintTop_toTopOf="@+id/home_imagebutton" />

        <TextView
            android:id="@+id/playagain_textview"
            style="@style/playagain_text_style"
            android:layout_width="315dp"
            android:layout_height="153dp"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="@+id/playagain_imagebutton"
            app:layout_constraintEnd_toEndOf="@+id/playagain_imagebutton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/playagain_imagebutton"
            app:layout_constraintTop_toTopOf="@+id/playagain_imagebutton" />

        <ImageView
            android:id="@+id/results_imageview"
            style="@style/results_image_style"
            android:layout_width="190dp"
            android:layout_height="132dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_insert_chart_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/home_imageview"
            style="@style/home_image_style"
            android:layout_width="190dp"
            android:layout_height="132dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/playagain_imageview"
            style="@style/playagain_image_style"
            android:layout_width="194dp"
            android:layout_height="167dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toStartOf="@+id/home_imageview"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toEndOf="@+id/results_imageview"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/balloons_replay"
            tools:ignore="ContentDescription" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="455dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="results_textview,home_textview,playagain_imagebutton,home_imagebutton,home_imageview,showresults_imagebutton,playagain_imageview,results_imageview,playagain_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1240dp" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>